--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: Wei Luo's Homepage
+page-top-title: Wei Luo
+top-section-bg-text: Artificial Intelligence
+home-subtitle: Wei Luo&ensp;|&ensp;罗维
+copyright-text: '&copy; Wei Luo 2022-2025. All Rights Reserved.'
